crates/strider-analyze/tests/snapshots/v3__ppc64be__memory__main.snap
---
source: crates/strider/tests/v3_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x10010304:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "6" [label="const 0x4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "7" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "1" -> "7" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "1" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "8" -> "7" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "8" [label="const 0x1001029c:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "7" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" -> "7" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "9" [label="const 0x4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "10" -> "7" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "10" [label="const 0x9:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "11" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "7" -> "11" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "12" -> "11" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "12" [label="const 0x10010230:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "11" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "13" -> "11" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "13" [label="const 0x4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "v14" [label="Post Call\nr5", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "7" -> "v14" [color="#888888", style=dashed];
  "v14" -> "11" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "15" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "11" -> "15" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "16" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "17" -> "15" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "17" [label="const 0x10010364:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "18" -> "15" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "v19" [label="Post Call\nr4", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "11" -> "v19" [color="#888888", style=dashed];
  "v19" -> "15" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "v20" [label="Post Call\nr5", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "11" -> "v20" [color="#888888", style=dashed];
  "v20" -> "15" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "21" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "15" -> "21" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "22" -> "21" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "23" -> "21" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "23" [label="const 0x10010384:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "24" -> "21" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "24" -> "21" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "v25" [label="Post Call\nr5", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "15" -> "v25" [color="#888888", style=dashed];
  "v25" -> "21" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "26" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "21" -> "26" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "27" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "28" -> "26" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0x100103b0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "24" -> "26" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "29" -> "26" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0x3:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "30" -> "26" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "30" [label="const 0x4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "31" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "26" -> "31" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "32" -> "31" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "33" -> "31" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "33" [label="const 0x100103f0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "34" -> "31" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "v35" [label="Post Call\nr4", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "26" -> "v35" [color="#888888", style=dashed];
  "v35" -> "31" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "v36" [label="Post Call\nr5", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "26" -> "v36" [color="#888888", style=dashed];
  "v36" -> "31" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "37" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "31" -> "37" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "38" -> "37" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "39" -> "37" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "v40" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "31" -> "v40" [color="#888888", style=dashed];
  "v40" -> "37" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "v41" [label="Post Call\nf1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "31" -> "v41" [color="#888888", style=dashed];
  "v41" -> "37" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "v42" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "31" -> "v42" [color="#888888", style=dashed];
  "v42" -> "37" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "39" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "43" -> "39" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "43" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "44" -> "43" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "44" [label="Xor:u64", shape=box, fillcolor="#2d2d2d"];
  "45" -> "44" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v40" -> "44" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "45" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "46" -> "45" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "46" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "31" -> "46" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "47" -> "46" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "47" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "48" -> "47" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "49" -> "47" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "49" [label="const 0xffffffffffffffd4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "48" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "38" [label="StackStore u32\n→ ram[sp - 44]", shape=box3d, fillcolor="#20182a"];
  "31" -> "38" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v50" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v50" -> "38" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "43" -> "38" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "34" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "48" -> "34" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "51" -> "34" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "51" [label="const 0xffffffffffffffb8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "32" [label="StackStore u32\n→ ram[sp - 72]", shape=box3d, fillcolor="#20182a"];
  "26" -> "32" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v52" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v52" -> "32" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "53" -> "32" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "53" [label="const 0x12345678:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "24" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "48" -> "24" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "54" -> "24" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "54" [label="const 0xffffffffffffffc0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "27" [label="StackStore u32\n→ ram[sp - 44]", shape=box3d, fillcolor="#20182a"];
  "21" -> "27" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v55" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v55" -> "27" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "56" -> "27" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "56" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "57" -> "56" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "57" [label="Xor:u64", shape=box, fillcolor="#2d2d2d"];
  "58" -> "57" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v59" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "21" -> "v59" [color="#888888", style=dashed];
  "v59" -> "57" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "58" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "60" -> "58" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "60" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "21" -> "60" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "47" -> "60" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "22" [label="StackStore u64\n→ ram[sp - 64]", shape=box3d, fillcolor="#20182a"];
  "61" -> "22" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v62" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v62" -> "22" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "63" -> "22" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "63" [label="Load u64\n← ram", shape=box3d, fillcolor="#102030"];
  "61" -> "63" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "64" -> "63" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "64" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "65" -> "64" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "66" -> "64" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "66" [label="const 0xfffffffffffefe0c:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "65" [label="init\nr12", shape=Mdiamond, fillcolor="#1a3a5c"];
  "61" [label="StackStore u32\n→ ram[sp - 44]", shape=box3d, fillcolor="#20182a"];
  "15" -> "61" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v67" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v67" -> "61" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "68" -> "61" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "68" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "69" -> "68" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "69" [label="Xor:u64", shape=box, fillcolor="#2d2d2d"];
  "70" -> "69" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v71" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "15" -> "v71" [color="#888888", style=dashed];
  "v71" -> "69" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "70" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "72" -> "70" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "72" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "15" -> "72" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "47" -> "72" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "18" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "48" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "73" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "73" [label="const 0xffffffffffffffc8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "16" [label="StackStore u64\n→ ram[sp - 56]", shape=box3d, fillcolor="#20182a"];
  "74" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v75" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v75" -> "16" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "76" -> "16" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "76" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "48" -> "76" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "77" -> "76" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "77" [label="const 0xffffffffffffffd0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "74" [label="StackStore u32\n→ ram[sp - 48]", shape=box3d, fillcolor="#20182a"];
  "78" -> "74" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v79" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v79" -> "74" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "80" -> "74" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "80" [label="const 0x7:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "78" [label="StackStore u32\n→ ram[sp - 44]", shape=box3d, fillcolor="#20182a"];
  "11" -> "78" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v81" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v81" -> "78" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "82" -> "78" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "82" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v83" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "11" -> "v83" [color="#888888", style=dashed];
  "v83" -> "82" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "4" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "48" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "84" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "84" [label="const 0xffffffffffffffd8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "5" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "48" -> "5" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "85" -> "5" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "85" [label="const 0xffffffffffffffe8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "2" [label="StackStore u64\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "86" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v87" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v87" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "88" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "88" [label="Load u64\n← ram", shape=box3d, fillcolor="#102030"];
  "86" -> "88" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "89" -> "88" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "89" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "65" -> "89" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "90" -> "89" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "90" [label="const 0xfffffffffffefdfc:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "86" [label="StackStore u64\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "91" -> "86" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v92" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v92" -> "86" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "93" -> "86" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "93" [label="Load u64\n← ram", shape=box3d, fillcolor="#102030"];
  "91" -> "93" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "94" -> "93" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "94" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "65" -> "94" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "95" -> "94" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "95" [label="const 0xfffffffffffefe04:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "91" [label="StackStore u64\n→ ram[sp - 176]", shape=box3d, fillcolor="#20182a"];
  "96" -> "91" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v97" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v97" -> "91" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "48" -> "91" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "96" [label="StackStore u64\n→ ram[sp + 16]", shape=box3d, fillcolor="#20182a"];
  "98" -> "96" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v99" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v99" -> "96" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "100" -> "96" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "100" [label="init\nLR", shape=Mdiamond, fillcolor="#1a3a5c"];
  "98" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "101" -> "98" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v102" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v102" -> "98" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "103" -> "98" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "103" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "101" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
